discussion/kv_engine/151917/151917_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

CBSS-501 stats: Add magma flushQTime histogram stats

Add histogram for amount of time flush tasks sits on flush Q.

Change-Id: Ie5ac7dde17f851b76b6f560fde6f7d6890610c92

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-06-04 18:21:30.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 18:34:14.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9526/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2604:46: error: no member named "FlushQTimeHisto" in "magma::MagmaHistogramStats"; did you mean "FlushWaitTimeHisto"? [clang-diagnostic-error]
            prefix, "flushQTime", histoStats.FlushQTimeHisto, add_stat, c);
                                             ^~~~~~~~~~~~~~~
                                             FlushWaitTimeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/stats.h:59:26: note: "FlushWaitTimeHisto" declared here
    MicrosecondHistogram FlushWaitTimeHisto;
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9526/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2604:46:
error: no member named "FlushQTimeHisto" in "magma::MagmaHistogramStats"; did you mean "FlushWaitTimeHisto"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9526/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36476/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2604): error C2039: "FlushQTimeHisto": is not a member of "magma::MagmaHistogramStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36476/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31167/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2604:46:
error: no member named "FlushQTimeHisto" in "magma::MagmaHistogramStats"; did you mean "FlushWaitTimeHisto"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10171/ : FAILURE

Compile error at [2021-06-04T18:23:39.203Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2604:46:
error: no member named "FlushQTimeHisto" in "magma::MagmaHistogramStats"; did you mean "FlushWaitTimeHisto"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10171/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11517/ : FAILURE

Compile error at [2021-06-04T18:28:41.920Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2604:46:
error: no member named "FlushQTimeHisto" in "magma::MagmaHistogramStats"; did you mean "FlushWaitTimeHisto"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11246/ : FAILURE

Compile error at [2021-06-04T18:27:12.143Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2604:46:
error: ?struct magma::MagmaHistogramStats? has no member named ?FlushQTimeHisto?; did you mean ?FlushWaitTimeHisto??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11246/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19103/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8122/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/73/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11101/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-06-23 23:53:18.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
